[package]
name = "deno_doc_runtime"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Gives access to the doc-api during runtime"

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
deno_doc = "=0.65.0"
# deno_runtime.workspace = true
tokio.workspace = true
